--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
       </div>
 
       <div>
-        <label>Industry Vertical</label>
+        <label>Industry</label>
         <select id="industryType">
           <option value="1.0">General / Retail</option>
           <option value="1.8">Finance / Banking (High Risk)</option>
@@ -626,6 +626,7 @@
   </script>
 </body>
 </html>
+
 
 
 
