--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
         <div class="cost-row"><span>IT Support & Restoration</span><span class="price">${formatCurrency(costITSupport)}</span></div>`;
       
       document.getElementById("legalDetails").innerHTML = `<h4>Legal & Regulatory</h4>
-        <div class="cost-row"><span>Law 25 / Regulatory Risk</span><span class="price">${formatCurrency(fineRisk)}</span></div>
+        <div class="cost-row"><span>Regulatory & Legal fines</span><span class="price">${formatCurrency(fineRisk)}</span></div>
         <div class="cost-row"><span>Counsel & Data Notifications</span><span class="price">${formatCurrency(totalLegal - fineRisk)}</span></div>`;
 
       document.getElementById("bizDetails").innerHTML = `<h4>Business Impact</h4>
@@ -442,4 +442,5 @@
   </script>
 </body>
 </html>
+
 
