--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
   <div class="container" id="formContainer">
     <h1>Breach Cost Simulator</h1>
-    <p class="subtitle">MSSP Edition: Financial Impact Analysis (CAD)</p>
+    <p class="subtitle"> Cyber-Financial & Operational Impacts (CAD)</p>
 
     <div class="grid-form">
       <div class="full-width">
@@ -442,5 +442,6 @@
   </script>
 </body>
 </html>
+
 
 
