--- a/index.html
+++ b/index.html
@@ -284,7 +284,8 @@
 
   <div class="container" id="formContainer">
     <h1>Breach Cost Simulator</h1>
-    <p class="subtitle">Visualizing the financial gravity of a compromise through a Canadian lens.</p>
+    <p class="subtitle">> Visualizing the financial and operational gravity of a cyber incident through a Canadian lens.
+.</p>
 
     <div class="grid-form">
       <div class="full-width">
@@ -630,3 +631,4 @@
   </script>
 </body>
 </html>
+
