--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
     
         <div style="padding: 20px;">
             <p style="font-size: 0.9rem; color: #94a3b8; margin-bottom: 20px; line-height: 1.6; border-bottom: 1px solid #1e293b; padding-bottom: 15px;">
-                Based on CSE observations since NCTA 2023-2024, five core trends will shape Canada’s cyber threat environment until 2026. These are compounded by an expanding threat surface (Cloud-based AI/IoT) and persistent supply chain vulnerabilities.
+                Based on CSE observations, five core trends will shape Canada’s cyber threat environment onward. These are compounded by an expanding threat surface (Cloud-based AI/IoT) and persistent supply chain vulnerabilities.
             </p>
     
             <div style="display: flex; flex-direction: column; gap: 12px; margin-bottom: 20px;">
@@ -631,4 +631,5 @@
   </script>
 </body>
 </html>
+
 
