--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 
   <div class="loading-overlay" id="loadingOverlay">
     <div class="spinner"></div>
-    <p style="margin-top: 20px; color: var(--accent-blue); font-family: 'JetBrains Mono';">ANALYZING RISK & REGULATORY IMPACT...</p>
+    <p style="margin-top: 20px; color: var(--accent-blue); font-family: 'JetBrains Mono';">ANALYZING DATA...</p>
   </div>
 
   <div class="container" id="formContainer">
@@ -631,5 +631,6 @@
   </script>
 </body>
 </html>
+
 
 
