--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                     <option value="1.8">Energy / Industrial</option>
                     <option value="2.0">Finance</option>
                     <option value="1.5">Government</option>
-                    <option value="2.2">Healthcare / Pharma</option>
+                    <option value="2.2">Healthcare </option>
                     <option value="1.5">Legal</option>
                     <option value="1.7">Manufacturing</option>
                     <option value="1.0">Retail</option>
@@ -590,7 +590,7 @@
                         {v: "1.8", t: "Energy / Industrial"},
                         {v: "2.0", t: "Finance"},
                         {v: "1.5", t: "Government"},
-                        {v: "2.2", t: "Healthcare / Pharma"},
+                        {v: "2.2", t: "Healthcare"},
                         {v: "1.5", t: "Legal"},
                         {v: "1.7", t: "Manufacturing"},
                         {v: "1.0", t: "Retail"},
@@ -690,7 +690,7 @@
                         {v: "1.8", t: "Énergie / Industriel"},
                         {v: "2.0", t: "Finance"},
                         {v: "1.5", t: "Gouvernement"},
-                        {v: "2.2", t: "Santé / Pharma"},
+                        {v: "2.2", t: "Santé"},
                         {v: "1.5", t: "Juridique"},
                         {v: "1.7", t: "Manufacturier"},
                         {v: "1.0", t: "Commerce de détail"},
@@ -1073,3 +1073,4 @@
     </script>
 </body>
 </html>
+
