--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ const translations = {
         lblLifecycle: "Incident & Recovery Lifecycle",
         
         regNotices: {
-            QC: "<strong>REGULATORY NOTICE — Loi 25 (QC):</strong> Severe penalties apply. Private sector fines can reach <strong>$25M or 4% of the total revenue</strong>. Immediate reporting to the CAI is mandatory where there is a risk of serious injury.",
+            QC: "<strong>REGULATORY NOTICE — Loi 25 (QC):</strong> Severe penalties apply. Private sector fines can reach <strong>$25M or 4% of the total revenue</strong>. Immediate reporting to the CAI is mandatory where there is a risk of serious prejudice.",
             ON: "<strong>REGULATORY NOTICE — PIPEDA + PHIPA (ON):</strong> Ontario organizations are subject to PIPEDA. If PHI is involved, PHIPA activates with fines up to <strong>$500,000</strong>. Class action risk is the primary financial driver in Ontario.",
             AB: "<strong>REGULATORY NOTICE — PIPA (AB):</strong> Alberta's PIPA requires notification if there is a real risk of significant harm. Fines are statutory but generally low; the focus is on remediating the cause.",
             BC: "<strong>REGULATORY NOTICE — PIPA (BC):</strong> Similar to Alberta. If health data is involved, E-Health Act applies. Recent case law emphasizes 'Intrusion upon Seclusion' torts.",
@@ -968,4 +968,5 @@ setLang('en');
 </script>
 </body>
 </html>
+
 
