--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@ const translations = {
         mainSubtitle: "> Visualisation de la gravité financière et opérationnelle d'un incident cyber selon une perspective canadienne.",
         lblScenario: "Scénario d'incident",
         lblIndustry: "Secteur d'activité",
-        lblRecords: "Vol de données personnelles  impactées",
+        lblRecords: "Données personnelles impactées",
         lblRevenue: "Chiffre d'affaires annuel (CAD)",
         lblRootCause: "Cause principale",
         lblProvince: "Province / Juridiction",
@@ -968,6 +968,7 @@ setLang('en');
 </script>
 </body>
 </html>
+
 
 
 
